# advent-of-code-solutions-rust

./: .gitignore  Cargo.toml  LICENSE.md  README.md  RELEASE_NOTES_v0.2.0.md  RELEASE_NOTES_v0.3.0.md  rustfmt.toml
aoc/: Cargo.toml
aoc-lib/: Cargo.toml
aoc-lib/src/: lib.rs  registry_generated.rs
aoc-lib/src/utils/: input.rs  mod.rs  output.rs
aoc-lib/src/year2024/: Day24_Notes.md  Day25_Notes.md  Day5_Notes.md  Year2024_README.md  day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day20.rs  day21.rs  day22.rs  day23.rs  day24.rs  day25.rs  mod.rs
aoc-lib/src/year2025/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day08_README.md  day09.rs  day10.rs  day11.rs  day12.rs  mod.rs
aoc/src/: main.rs
benches/: Cargo.toml
benches/benches/: all_days.rs
registry-tool/: Cargo.toml  README.md
registry-tool/src/: main.rs
scripts/: sync-template.sh
