[workspace]
resolver = "2"
members = [
    "aoc-lib",
    "aoc",
    "benches",
    "registry-tool",
]

[workspace.package]
version = "0.2.0"
edition = "2021"
authors = ["Advent of Code Solutions"]
rust-version = "1.75"

[workspace.dependencies]
# Required dependencies
anyhow = "1.0.97"
clap = { version = "4.5", features = ["derive", "cargo"] }
colored = "2.1"
criterion = { version = "0.5", features = ["html_reports"] }
reqwest = { version = "0.12", features = ["blocking", "cookies"] }

# Optional utilities (uncomment in aoc-lib/Cargo.toml as needed)
regex = "1.11.1"
ahash = "0.8.11"
atoi = "2.0.0"
itertools = "0.14.0"
once_cell = "1.20.2"
