[package]
name = "aoc-lib"
version.workspace = true
edition.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
reqwest.workspace = true
colored.workspace = true

# Optional: Uncomment these as needed for your solutions
# regex.workspace = true
# ahash.workspace = true
# atoi.workspace = true
# itertools.workspace = true
# once_cell.workspace = true
